--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "firebase-admin": "12.1.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
